crates/parser/tests/cases/snapshots/cases__errors__stmt_vardecl_tuple_empty.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_vardecl_tuple_empty), functions::parse_stmt,\n    \"(a, ()) : u256\")"

---
error: Variable declaration must begin with `let`
  ┌─ stmt_vardecl_tuple_empty:1:1
  │
1 │ (a, ()) : u256
  │ ^^^^^^^ invalid variable declaration
  │
  = Example: `let x: u8 = 1`


